--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,18 @@
       <header class="header">
         <div class="header__container">
           <div class="header__logo-container">
-            <img src="./img/logo-desktop.svg" alt="Мишка" />
+            <picture>
+              <source
+                media="(min-width: 1200px)"
+                srcset="./img/logo-desktop.svg"
+              />
+              <source
+                media="(min-width: 768px)"
+                srcset="./img/logo-tablet.svg"
+              />
+              <img src="./img/logo-mobile.svg" alt="Мишка" / width="90px"
+              height="40px">
+            </picture>
           </div>
           <ul class="header__list">
             <li class="header__item">
@@ -62,38 +73,66 @@
       <div class="main-page__product">
         <section class="product">
           <div class="container">
-            <h2 class="product__name">Вязаные корзинки</h2>
-            <span class="product__week">Товар недели</span>
-            <p class="product__description">
-              Экологически чистая пряжа, ручная работа. Доступны в шести
-              расцветках и трех размерах.
-            </p>
-            <table class="product__table">
-              <tr class="product__table-line">
-                <td class="product__table-cell">Цвет:</td>
-                <td class="product__table-cell product__table-cell_right">
-                  «Тиффани»/серый
-                </td>
-              </tr>
-              <tr class="product__table-line">
-                <td class="product__table-cell">Диаметр:</td>
-                <td class="product__table-cell product__table-cell_right">
-                  25 см
-                </td>
-              </tr>
-              <tr class="product__table-line">
-                <td class="product__table-cell">Высота:</td>
-                <td class="product__table-cell product__table-cell_right">
-                  15 см
-                </td>
-              </tr>
-            </table>
-            <div class="product__img-container">
-              <img src="./img/triple-set-mobile@1x.jpg" alt="Корзина" />
+            <div class="product__main">
+              <h2 class="product__name">Вязаные корзинки</h2>
+              <span class="product__week">Товар недели</span>
             </div>
-            <p class="product__price">Цена: 990 руб.</p>
-            <div class="product__button">
-              <button class="button">Заказать</button>
+            <div class="product__wrapper">
+              <div class="product__container">
+                <div class="product__text-container">
+                  <p class="product__description">
+                    Экологически чистая пряжа, ручная работа. Доступны в шести
+                    расцветках и трех размерах.
+                  </p>
+                  <table class="product__table">
+                    <tr class="product__table-line">
+                      <td class="product__table-cell">Цвет:</td>
+                      <td class="product__table-cell product__table-cell_right">
+                        «Тиффани»/серый
+                      </td>
+                    </tr>
+                    <tr class="product__table-line">
+                      <td class="product__table-cell">Диаметр:</td>
+                      <td class="product__table-cell product__table-cell_right">
+                        25 см
+                      </td>
+                    </tr>
+                    <tr class="product__table-line">
+                      <td class="product__table-cell">Высота:</td>
+                      <td class="product__table-cell product__table-cell_right">
+                        15 см
+                      </td>
+                    </tr>
+                  </table>
+                  <p class="product__price">Цена: 990 руб.</p>
+                  <div class="product__button">
+                    <button class="button">Заказать</button>
+                  </div>
+                </div>
+                <div class="product__img-container">
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./img/triple-set-desktop@1x.jpg,
+                        ./img/triple-set-desktop@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./img/triple-set-tablet@1x.jpg,
+                        ./img/triple-set-tablet@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      src="./img/triple-set-mobile@1x.jpg"
+                      srcset="./img/triple-set-mobile@2x.jpg 2x"
+                      alt="Корзина"
+                    />
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
         </section>
@@ -103,26 +142,26 @@
           <div class="container">
             <h2 class="about-us__name">Коротко о нас:</h2>
             <ul class="about-us__advantage-list">
-              <li class="about-us__adventage">
+              <li class="about-us__advantage">
                 Экологически <br />
                 чистые материалы
               </li>
-              <li class="about-us__adventage">
+              <li class="about-us__advantage">
                 Связано вручную с <br />
                 любовью и умилением
               </li>
-              <li class="about-us__adventage">
+              <li class="about-us__advantage">
                 Скандинавский стиль <br />
                 по российской цене
               </li>
-              <li class="about-us__adventage">
+              <li class="about-us__advantage">
                 Поддержка отечественного производителя
               </li>
-              <li class="about-us__adventage">
+              <li class="about-us__advantage">
                 Увеличивает лайки <br />
                 на фотографиях
               </li>
-              <li class="about-us__adventage">
+              <li class="about-us__advantage">
                 Поставляется в <br />
                 подарочной упаковке
               </li>
@@ -185,7 +224,25 @@
               <button class="button">Напишите нам</button>
             </div>
             <div class="contacts__map">
-              <img src="./img/map-desktop@1x.jpg" alt="Карта" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/map-desktop@1x.jpg"
+                  srcset="./img/map-desktop@2x.jpg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/map-tablet@1x.jpg"
+                  srcset="./img/map-tablet@2x.jpg"
+                />
+                <img
+                  src="./img/map-mobile@1x.jpg"
+                  srcset="./img/map-mobile@2x.jpg"
+                  alt="Карта"
+                  width="322px"
+                  height="457px"
+                />
+              </picture>
             </div>
           </div>
         </section>
