--- a/source/index.html
+++ b/source/index.html
@@ -104,10 +104,6 @@
                       </td>
                     </tr>
                   </table>
-                  <p class="product__price">Цена: 990 руб.</p>
-                  <div class="product__button">
-                    <button class="button">Заказать</button>
-                  </div>
                 </div>
                 <div class="product__img-container">
                   <picture>
@@ -131,6 +127,12 @@
                       alt="Корзина"
                     />
                   </picture>
+                  <div class="product__price-container">
+                    <p class="product__price">Цена: 990 руб.</p>
+                    <div class="product__button">
+                      <button class="button">Заказать</button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
